version 1.2.2x (2013-08-20)
	Updated comments (roxygen2) style for all the functions using the Rd2roxygen package (07-13)
	Updated plotCorr and plotMRheatmap to allow various colors/not require trials(07-13)
	Updated MRfisher to include thresholding for presence-absence testing (08-19)
	Included Presence-Absence in vignette 

version 1.1.9 (2013-06-25)
	
	Modified load_meta and load_metaQ to be faster/use less memory
	Modified cumNormStat to remove NA samples from calculations (example would be samples without any counts)

version 1.1.7 (2013-06-11)

	Changed modified date on vignette

version 1.1.6 (2013-06-11)

	Re-added plotGenus' jitter
	Fixed vignette with the new plotOTU and plotGenus call
	Fixed uniqueNames call in the MR tables

version 1.1.5 (2013-06-11)

Changed thanks to Kasper Daniel Hansen's suggestions the following:

	plotOTU and plotGenus both have much better auto-generated axis
	MRtable, MRfulltable, MRcoefs have a sort by p-value option now
	MRtable, MRfulltable, MRcoefs now have an extra option to include unique numbers for OTU features (default would automatically add them previously)

Still need to turn the fitZig output to S3, consider subsetting function address low p-values

version 1.1.3 (2013-06-01) 

Changed thanks to Kasper Daniel Hansen's suggestions the following:

	cumNorm.R - now returns the object as well - not just replacing the environment

version 1.0.0: (2013-03-29)

	-- release!