@@ -24,6 +24,7 @@ plotCorr,
 plotGenus,
 plotMRheatmap,
 plotOTU,
+plotOrd,
 zigControl,
 newMRexperiment,
 MRcounts,
