@@ -4,13 +4,18 @@
 \alias{MRcounts,MRexperiment-method}
 \title{Accessor for the counts slot of a MRexperiment object}
 \usage{
-  MRcounts(obj, norm = FALSE)
+  MRcounts(obj, norm = FALSE, log = FALSE, sl = 1000)
 }
 \arguments{
   \item{obj}{a \code{MRexperiment} object.}
 
   \item{norm}{logical indicating whether or not to return
   normalized counts.}
+
+  \item{log}{TRUE/FALSE whether or not to log_2 transform
+  scale.}
+
+  \item{sl}{The value to scale by (default=1000).}
 }
 \description{
   The counts slot holds the raw count data representing
@@ -19,7 +24,7 @@
 }
 \examples{
 data(lungData)
-   head(MRcounts(lungData))
+head(MRcounts(lungData))
 }
 \author{
   Joseph N. Paulson, jpaulson@umiacs.umd.edu
